JS timing bug; minor display issues on mobile

--- a/assets/src/app.scss
+++ b/assets/src/app.scss
@@ -63,3 +63,7 @@
     }
   }
 }
+
+.app-analysis-container {
+  font-size: .9em;
+}
